# SpecialGame

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  README.md
android-project/: gradle.properties  local.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/by/kostahka/aftertime_imprisonment/: GameActivity.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml
assets/: scene-data.kpkg
assets/resources/animations/: enemy-animation.kpkg  player-animation.kpkg
assets/resources/audio/: astronaut-fly-sound.kpkg  astronaut-hurt-sound.kpkg  astronaut-walk-audio.kpkg  drill-sound.kpkg  ground-damage-sound.kpkg  pistol-shoot-sound.kpkg
assets/resources/fonts/: turret-road-light.kpkg
assets/resources/materials/: background-material.kpkg  drill-beam-material.kpkg  landscape-material.kpkg  planet-material.kpkg  special-game-gui-material.kpkg  special-game-sprite-material.kpkg  turret-road-light-material.kpkg
assets/resources/shaders/: background-fragment-shader.kpkg  background-shader.kpkg  background-vertex-shader.kpkg  drill-beam-fragment.kpkg  landscape-fragment-shader.kpkg  landscape-shader.kpkg  landscape-vertex-shader.kpkg  planet-fragment-shader.kpkg  planet-shader.kpkg  planet-vertex-shader.kpkg
assets/resources/textures/: background-texture.kpkg  landscape-texture.kpkg  special-game-gui-texture.kpkg  special-game-texture.kpkg
assets/scenes/: background.ksc  bullet.ksc  enemy-waves-gui.ksc  enemy.ksc  game-over-menu.ksc  main-menu.ksc  menu-button.ksc  pause-menu.ksc  planet.ksc  player-gui.ksc  player.ksc  tutorial-menu.ksc
assets/shaders/: background-vertex.vert  drill-beam-fragment.frag  drill-beam-vertex.vert  landscape-vertex.vert  planet-fragment.frag  planet-vertex.vert
engine/: CMakeLists.txt
engine/glad/include/glad/: glad.h
engine/glad/src/: glad.c
engine/imgui-src/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp
engine/include/: color.hxx  draw-primitives.hxx  engine-resources.hxx  engine.hxx  event.hxx  file-last-modify-listener.hxx  shader-program.hxx  sprite.hxx  texture.hxx  transform3d.hxx  vertex-array-object.hxx  vertex.hxx
engine/include/Kengine/: engine.hxx  file-last-modify-listener.hxx  transform3d.hxx
engine/include/Kengine/audio/: audio.hxx
engine/include/Kengine/event/: event.hxx  user-events.hxx
engine/include/Kengine/io/: file-manager.hxx  input.hxx
engine/include/Kengine/render/: animation.hxx  b2GLDraw.hxx  color.hxx  draw-primitives.hxx  shader-program.hxx  sprite.hxx  texture.hxx  vertex-array-object.hxx  vertex.hxx
engine/src/: b2GLDraw.cxx  draw-primitives.cxx  engine-resources.cxx  engine.cxx  event-engine.hxx  event.cxx  file-last-modify-listener.cxx  handle-file-modify.hxx  handle-user-event.hxx  input.cxx  opengl-error.cxx  opengl_error.hxx  shader-program.cxx  sprite.cxx  texture.cxx  transform3d.cxx  user-events.cxx  vertex-array-object.cxx
engine/src/audio/: audio.cxx  audio.hxx
engine/src/event/: event-engine.hxx  event.cxx  user-events.cxx
engine/src/io/: file-manager.cxx  input.cxx
engine/src/render/: animation.cxx  b2GLDraw.cxx  draw-primitives.cxx  engine-resources.cxx  opengl-error.cxx  shader-program.cxx  sprite.cxx  texture.cxx  vertex-array-object.cxx
include/: camera.hxx  cursor.hxx  game.hxx  joystick.hxx  landscape.hxx  player.h  player.hxx  resources.hxx
include/astronaut/: astronaut.hxx  bullet.hxx  enemy.hxx  enemy_spawner.hxx  gun.hxx  player.hxx
include/components/: astronaut-component.hxx  bullet-component.hxx  damage-interface.hxx  enemies-progress-bar-component.hxx  enemy-component.hxx  enemy-wave-text-component.hxx  game-over-menu-component.hxx  game-tutorial-menu-component.hxx  gui-button-component.hxx  gui-selectable-component.hxx  pause-menu-component.hxx  player-controller.hxx  player-gun-selectable-component.hxx  player-health-bar-component.hxx  progress-bar-component.hxx
include/game-object/: controller.hxx  destroy_listener.hxx  game-object.hxx
include/physics/: collision_interface.hxx  physic-object.hxx  physics.hxx
include/render/: background.hxx  camera.hxx  cursor.hxx  game-gui.hxx  game_gui.hxx  resources.hxx
include/resources/: resources.hxx
include/scene/: main-menu.hxx  planet-scene.hxx  scene.hxx
include/system/: astronaut-system.hxx  background-system.hxx  bullet-system.hxx  enemy-spawner-system.hxx  enemy-system.hxx  game-gui-system.hxx  landscape-system.hxx  planet-gameplay-system.hxx  player-system.hxx
shaders/: background-fragment.frag  drill-beam-fragment.frag  fragment.frag  landscape-fragment.frag  landscape-vertex.vert  vertex.vert
src/: CMakeLists.txt  camera.cxx  cursor.cxx  game.cxx  joystick.cxx  landscape.cxx  player.cpp  resources.cxx
src/astronaut/: astronaut.cxx  bullet.cxx  enemy.cxx  enemy_spawner.cxx  player.cxx
src/components/: astronaut-component.cxx  bullet-component.cxx  enemies-progress-bar-component.cxx  enemy-component.cxx  enemy-wave-text-component.cxx  game-over-menu-component.cxx  game-tutorial-menu-component.cxx  gui-button-component.cxx  gui-selectable-component.cxx  pause-menu-component.cxx  player-controller.cxx  player-gun-selectable-component.cxx  player-health-bar-component.cxx  progress-bar-component.cxx
src/game-object/: controller.cxx  destroy_listener.cxx  game-object.cxx
src/physics/: physics-object.cxx  physics.cxx
src/render/: background.cxx  camera.cxx  cursor.cxx  game-gui.cxx  resources.cxx
src/resources/: resources.cxx
src/scene/: main-menu.cxx  planet-scene.cxx  scene.cxx
src/system/: astronaut-system.cxx  background-system.cxx  bullet-system.cxx  enemy-spawner-system.cxx  enemy-system.cxx  game-gui-system.cxx  landscape-system.cxx  planet-gameplay-system.cxx  player-system.cxx
